test/features/errors/semantic/e1040_private_field_access.spl
# E1040: Private Field Access

Feature: E1040 - Accessing Private Field
  As a Simple compiler
  I want to detect access to private fields from outside the defining module
  So that field privacy is enforced

  Background:
    Given I have the Simple compiler
    And the compiler supports field visibility

  Scenario: Accessing private field from outside
    When I compile:
      '''
      mod mymod:
        pub struct Point:
          x: i32  # Private by default
          pub y: i32

      fn test():
        val p = mymod::Point { x: 0, y: 0 }
        print(p.x)  # Error: x is private
      '''
    Then I should see error E1040 at line 8
    And the error message should be "field `{field}` of struct `{struct_name}` is private"
    And the label should indicate "private field"
    And the help should suggest "make the field public or access it through a public method"

  Scenario: Accessing public field is OK
    When I compile:
      '''
      mod mymod:
        pub struct Point:
          x: i32
          pub y: i32

      fn test():
        val p = mymod::Point { x: 0, y: 0 }
        print(p.y)  # OK: y is public
      '''
    Then compilation should succeed

  Scenario: Accessing field within same module
    When I compile:
      '''
      mod mymod:
        pub struct Point:
          x: i32  # Private

        pub fn get_x(p: Point) -> i32:
          p.x  # OK: same module
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      struct Point:
        private_x: i32

      fn test():
        val p = Point { private_x: 0 }
        print(p.private_x)
      '''
    Then I should see error E1040
    And the error message should contain "비공개 필드 접근"
